@@ -65,7 +65,7 @@ class PdbxLoaderFixture(unittest.TestCase):
         self.__cachePath = os.path.join(TOPDIR, "CACHE")
         self.__readBackCheck = True
         self.__numProc = 1
-        self.__chunkSize = 5
+        self.__chunkSize = 1
         self.__fileLimit = 38
         self.__documentStyle = "rowwise_by_name_with_cardinality"
         #
@@ -121,44 +121,44 @@ class PdbxLoaderFixture(unittest.TestCase):
         ]
         #
         self.__pdbIdList = [
-            "1ah1",
-            "1b5f",
-            "1bmv",
-            "1c58",
-            "1dsr",
-            "1dul",
-            "1kqe",
-            "1o3q",
-            "1sfo",
-            "2hw3",
-            "2hyv",
-            "2osl",
-            "2voo",
-            "2wmg",
-            "3ad7",
-            "3hya",
-            "3iyd",
-            "3mbg",
-            "3rer",
-            "3vd8",
-            "3vfj",
-            "3x11",
-            "3ztj",
-            "4e2o",
-            "4en8",
-            "4mey",
-            "5eu8",
-            "5kds",
-            "5tm0",
-            "5vh4",
-            "5vp2",
-            "6fsz",
-            "6lu7",
-            "6nn7",
-            "6q20",
-            "6rfk",
-            "6rku",
-            "6yrq",
+            "1AH1",
+            "1B5F",
+            "1BMV",
+            "1C58",
+            "1DSR",
+            "1DUL",
+            "1KQE",
+            "1O3Q",
+            "1SFO",
+            "2HW3",
+            "2HYV",
+            "2OSL",
+            "2VOO",
+            "2WMG",
+            "3AD7",
+            "3HYA",
+            "3IYD",
+            "3MBG",
+            "3RER",
+            "3VD8",
+            "3VFJ",
+            "3X11",
+            "3ZTJ",
+            "4E2O",
+            "4EN8",
+            "4MEY",
+            "5EU8",
+            "5KDS",
+            "5TM0",
+            "5VH4",
+            "5VP2",
+            "6FSZ",
+            "6LU7",
+            "6NN7",
+            "6Q20",
+            "6RFK",
+            "6RKU",
+            "6YRQ",
         ]
         self.__ldList = [
             {
